Fix: spacing

--- a/index.css
+++ b/index.css
@@ -38,7 +38,7 @@ button {
 
 .header {
   min-width: 100%;
-  height: 52px;
+  height: 60px;
   background-color: var(--white);
   position: fixed;
   z-index: 1000;
